@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2023 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@ package au.gov.asd.tac.constellation.views.analyticview.results;
 import au.gov.asd.tac.constellation.graph.GraphElementType;
 import au.gov.asd.tac.constellation.views.analyticview.AnalyticViewController;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -25,7 +26,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 
 /**
  * The result of an AnalyticPlugin, which will be supported by one or more
@@ -56,7 +56,7 @@ public abstract class AnalyticResult<D extends AnalyticData> {
         analyticViewController.selectOnGraph(GraphElementType.TRANSACTION, transactionsToSelect);
     }
 
-    public void setSelectionOnVisualisation(final GraphElementType elementType, final List<Integer> elementIds) {
+    public void setSelectionOnVisualisation(final GraphElementType elementType, final Collection<Integer> elementIds) {
         final List<D> selectedElementScores = new ArrayList<>();
         final List<D> ignoredElementScores = new ArrayList<>();
         result.values().forEach(elementScore -> {
@@ -99,7 +99,7 @@ public abstract class AnalyticResult<D extends AnalyticData> {
     }
 
     public final List<D> get() {
-        return Collections.unmodifiableList(result.values().stream().collect(Collectors.toList()));
+        return Collections.unmodifiableList(result.values().stream().toList());
     }
 
     public final Map<IdentificationData, D> getResult() {
