@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,6 +26,7 @@ import au.gov.asd.tac.constellation.utilities.icon.UserInterfaceIconProvider;
 import au.gov.asd.tac.constellation.views.tableview.TableViewTopComponent;
 import au.gov.asd.tac.constellation.views.tableview.api.ActiveTableReference;
 import au.gov.asd.tac.constellation.views.tableview.api.Column;
+import au.gov.asd.tac.constellation.views.tableview.api.TableDefaultColumns;
 import au.gov.asd.tac.constellation.views.tableview.api.UpdateMethod;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -47,6 +48,7 @@ import javafx.scene.control.TextField;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.HBox;
+import org.openide.util.Lookup;
 
 /**
  * Creates the column visibility context menu. This menu contains items that
@@ -115,13 +117,17 @@ public class ColumnVisibilityContextMenu {
         });
 
         showDefaultColumnsMenu = createCustomMenu(DEFAULT_COLUMNS, e -> {
+            final TableDefaultColumns tableDefaultColumnsProvider = Lookup.getDefault().lookup(TableDefaultColumns.class);
+            
+            final List<Integer> ids = tableDefaultColumnsProvider.getDefaultAttributes(getTableViewTopComponent().getCurrentGraph()).stream()
+                    .map(GraphAttribute::getId)
+                    .collect(Collectors.toList());
+
             getActiveTableReference().updateVisibleColumns(
                     getTableViewTopComponent().getCurrentGraph(),
                     getTableViewTopComponent().getCurrentState(),
                     extractColumnAttributes(table.getColumnIndex().stream()
-                            .filter(column -> Character.isUpperCase(
-                            column.getAttribute().getName().charAt(0))
-                            )
+                            .filter(column -> ids.contains(column.getAttribute().getId()))
                             .collect(Collectors.toList())),
                     UpdateMethod.REPLACE
             );
@@ -131,8 +137,7 @@ public class ColumnVisibilityContextMenu {
         showPrimaryColumnsMenu = createCustomMenu(KEY_COLUMNS, e -> {
             if (getTableViewTopComponent().getCurrentGraph() != null) {
                 final Set<GraphAttribute> keyAttributes = new HashSet<>();
-                final ReadableGraph readableGraph = getTableViewTopComponent().getCurrentGraph().getReadableGraph();
-                try {
+                try (final ReadableGraph readableGraph = getTableViewTopComponent().getCurrentGraph().getReadableGraph()) {
                     final int[] vertexKeys = readableGraph.getPrimaryKey(GraphElementType.VERTEX);
                     for (final int vertexKey : vertexKeys) {
                         keyAttributes.add(new GraphAttribute(readableGraph, vertexKey));
@@ -141,19 +146,15 @@ public class ColumnVisibilityContextMenu {
                     for (final int transactionKey : transactionKeys) {
                         keyAttributes.add(new GraphAttribute(readableGraph, transactionKey));
                     }
-                } finally {
-                    readableGraph.release();
                 }
-                getActiveTableReference().updateVisibleColumns(
-                        getTableViewTopComponent().getCurrentGraph(),
-                        getTableViewTopComponent().getCurrentState(),
-                        extractColumnAttributes(
-                                table.getColumnIndex().stream()
-                                        .filter(column -> keyAttributes.stream()
-                                        .anyMatch(keyAttribute -> keyAttribute.equals(column.getAttribute()))
-                                        )
-                                        .collect(Collectors.toList())
-                        ),
+                final List<Tuple<String, Attribute>> extractColumnAttributes = extractColumnAttributes(
+                        table.getColumnIndex().stream()
+                                .filter(column -> keyAttributes.stream()
+                                        .anyMatch(keyAttribute -> keyAttribute.equals(column.getAttribute())))
+                                .toList()
+                );
+                getActiveTableReference().updateVisibleColumns(getTableViewTopComponent().getCurrentGraph(),
+                        getTableViewTopComponent().getCurrentState(), extractColumnAttributes,
                         UpdateMethod.REPLACE
                 );
                 e.consume();
@@ -200,17 +201,9 @@ public class ColumnVisibilityContextMenu {
             final String columnHeading = columnTuple.getAttributeNamePrefix();
             if (columnHeading != null) {
                 switch (columnHeading) {
-                    case GraphRecordStoreUtilities.SOURCE:
-                        columnCheckboxesSource.add(createColumnVisibilityMenu(columnTuple));
-                        break;
-                    case GraphRecordStoreUtilities.DESTINATION:
-                        columnCheckboxesDestination.add(createColumnVisibilityMenu(columnTuple));
-                        break;
-                    case GraphRecordStoreUtilities.TRANSACTION:
-                        columnCheckboxesTransaction.add(createColumnVisibilityMenu(columnTuple));
-                        break;
-                    default:
-                        break;
+                    case GraphRecordStoreUtilities.SOURCE -> columnCheckboxesSource.add(createColumnVisibilityMenu(columnTuple));
+                    case GraphRecordStoreUtilities.DESTINATION -> columnCheckboxesDestination.add(createColumnVisibilityMenu(columnTuple));
+                    case GraphRecordStoreUtilities.TRANSACTION -> columnCheckboxesTransaction.add(createColumnVisibilityMenu(columnTuple));
                 }
             }
         });
@@ -361,8 +354,7 @@ public class ColumnVisibilityContextMenu {
         final CustomMenuItem menuItem = new CustomMenuItem(box);
         menuItem.setHideOnClick(false);
 
-        textField.setOnKeyReleased(
-                new ColumnFilterKeyReleasedEventHandler(columnCheckboxes));
+        textField.setOnKeyReleased(new ColumnFilterKeyReleasedEventHandler(columnCheckboxes));
 
         return menuItem;
     }
@@ -406,12 +398,8 @@ public class ColumnVisibilityContextMenu {
      */
     private List<Tuple<String, Attribute>> extractColumnAttributes(final List<Column> columns) {
         return columns.stream()
-                .map(column
-                        -> Tuple.create(
-                        column.getAttributeNamePrefix(),
-                        column.getAttribute())
-                )
-                .collect(Collectors.toList());
+                .map(column -> Tuple.create(column.getAttributeNamePrefix(), column.getAttribute()))
+                .toList();
     }
 
     /**
@@ -425,8 +413,7 @@ public class ColumnVisibilityContextMenu {
      * added to the menu
      * @return the created menu item or null if column check boxes is empty
      */
-    private CustomMenuItem createDynamicColumnMenu(final MenuButton button,
-            final List<CustomMenuItem> columnCheckboxes) {
+    private CustomMenuItem createDynamicColumnMenu(final MenuButton button, final List<CustomMenuItem> columnCheckboxes) {
         if (!columnCheckboxes.isEmpty()) {
             button.getItems().addAll(columnCheckboxes);
 
@@ -448,8 +435,7 @@ public class ColumnVisibilityContextMenu {
      * is clicked
      * @return the created menu item
      */
-    private CustomMenuItem createCustomMenu(final String title,
-            final EventHandler<ActionEvent> handler) {
+    private CustomMenuItem createCustomMenu(final String title, final EventHandler<ActionEvent> handler) {
         final CustomMenuItem menuItem = new CustomMenuItem(new Label(title));
 
         menuItem.setHideOnClick(false);
@@ -482,7 +468,7 @@ public class ColumnVisibilityContextMenu {
      * field. Based on the filter text, the handler will hide and show the
      * columns it searches across.
      */
-    class ColumnFilterKeyReleasedEventHandler implements EventHandler<KeyEvent> {
+    private class ColumnFilterKeyReleasedEventHandler implements EventHandler<KeyEvent> {
 
         private final List<CustomMenuItem> columnCheckboxes;
 
